Survey Page ok #1  #6

--- a/HelpDesk.Web/Views/Failure/Survey.cshtml
+++ b/HelpDesk.Web/Views/Failure/Survey.cshtml
@@ -14,23 +14,23 @@
             <label asp-for="Satisfaction" class="control-label col-md-2"></label>
             
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Satisfaction, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Satisfaction, "", new { @class = "text-danger" })
+                <input asp-for="Satisfaction" class="form-control" />
+               @Html.ValidationMessageFor(model => model.Satisfaction, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <label asp-for="TechPoint" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TechPoint, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.TechPoint, "", new {@class = "text-danger"})
+                <input asp-for="TechPoint" class="form-control" />
+                @Html.ValidationMessageFor(model => model.TechPoint, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <label asp-for="Speed" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Speed, new { htmlAttributes = new { @class = "form-control" } })
+                <input asp-for="Speed" class="form-control" />
                 @Html.ValidationMessageFor(model => model.Speed, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="form-group">
             <label asp-for="Pricing" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Pricing, new { htmlAttributes = new { @class = "form-control" } })
+                <input asp-for="Pricing" class="form-control" />
                 @Html.ValidationMessageFor(model => model.Pricing, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -46,7 +46,7 @@
         <div class="form-group">
             <label asp-for="Solving" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Solving, new { htmlAttributes = new { @class = "form-control" } })
+                <input asp-for="Solving" class="form-control" />
                 @Html.ValidationMessageFor(model => model.Solving, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -54,11 +54,10 @@
         <div class="form-group">
             <label asp-for="Suggestions" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Suggestions, new { htmlAttributes = new { @class = "form-control" } })
+                <input asp-for="Suggestions" class="form-control" />
                 @Html.ValidationMessageFor(model => model.Suggestions, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Gönder" class="btn btn-default" />
