--- a/HelpDesk.Web/Views/Operator/FailureList.cshtml
+++ b/HelpDesk.Web/Views/Operator/FailureList.cshtml
@@ -48,10 +48,10 @@
                                 <tr>
                                     <td class="text-center">@(i + 1)</td>
                                     <td>@data.CreatedTime</td>
-                                    <td>@(data.ClientId != null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Name)</td>
-                                    <td>@(data.ClientId != null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Surname)</td>
+                                    <td>@(data.ClientId == null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Name)</td>
+                                    <td>@(data.ClientId == null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Surname)</td>
                                     <td>@HelpDesk.BLL.Helpers.EnumHelpers.GetDescription(data.OperationStatus)</td>
-                                    <td class="text-center">@(data.TechnicianId != null ? "-" : _membershipTools.GetNameSurname(data.TechnicianId).Result)</td>
+                                    <td class="text-center">@(data.TechnicianId == null ? "-" : _membershipTools.GetNameSurname(data.TechnicianId).Result)</td>
                                     <td class="text-center">
                                         <a href="@Url.Action("Detail", "Operator", new {id = data.FailureId})" class="btn btn-success">
                                             Ayrıntılar
