--- a/HelpDesk.Web/Views/Technician/FailureList.cshtml
+++ b/HelpDesk.Web/Views/Technician/FailureList.cshtml
@@ -52,11 +52,11 @@
                                     <tr>
                                         <td class="text-center">@(i + 1)</td>
                                         <td>@data.CreatedTime</td>
-                                        <td>@(data.ClientId != null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Name)</td>
-                                        <td>@(data.ClientId != null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Name)</td>
+                                        <td>@(data.ClientId == null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Name)</td>
+                                        <td>@(data.ClientId == null ? "-" : _membershipTools.UserManager.FindByIdAsync(data.ClientId).Result.Surname)</td>
                                         <td>@HelpDesk.BLL.Helpers.EnumHelpers.GetDescription(data.OperationStatus)</td>
-                                        <td class="text-center">@(data.OperatorId != null ? "-" : _membershipTools.GetNameSurname(data.OperatorId).Result)</td>
-                                        <td class="text-center">@(data.TechnicianId != null ? "-" : _membershipTools.GetNameSurname(data.TechnicianId).Result)</td>
+                                        <td class="text-center">@(data.OperatorId == null ? "-" : _membershipTools.GetNameSurname(data.OperatorId).Result)</td>
+                                        <td class="text-center">@(data.TechnicianId == null ? "-" : _membershipTools.GetNameSurname(data.TechnicianId).Result)</td>
 
 
                                         <td class="text-center">
