Raporlama Sayfaları oluşturuldu #1, #2, #7

--- a/HelpDesk.Web/Views/Admin/Reports.cshtml
+++ b/HelpDesk.Web/Views/Admin/Reports.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @using HelpDesk.BLL.Repository
+@using HelpDesk.Models.Entities
 @model List<HelpDesk.Models.Entities.Survey>
-@inject FailureRepo _failureRepo
+@inject HelpDesk.BLL.Repository.Abstracts.IRepository<Failure, int> _failureRepo
 @{
     ViewBag.Title = "Raporlar";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,56 +15,53 @@
 }
 
 <div class="table-responsive">
-    <table id="example2" class="display table table-striped" style="width: 100%; mso-cellspacing: 0;">
-        <thead>
-            <tr>
-                <th style="font-weight: bold">#</th>
-                <th style="font-weight: bold">Arıza Id</th>
-                <th style="font-weight: bold">Arıza Açıklama</th>
-                <th style="font-weight: bold">Memnuniyet</th>
-                <th style="font-weight: bold">Teknisyen</th>
-                <th style="font-weight: bold">Hız</th>
-                <th style="font-weight: bold">Fiyat</th>
-                <th style="font-weight: bold">Çözüm</th>
-                <th style="font-weight: bold">Süre (Gün)</th>
-                <th style="font-weight: bold">Aksiyon</th>
-            </tr>
-        </thead>
-        <tbody>
-            @for (var i = 0; i < Model.Count; i++)
-            {
+    <div class="row">
+        <div class="col-md-6 col-md-offset-2">
+            <div id="chart_div"></div>
+        </div>
+    </div>
+    <div class="row">
+        <table id="example2" class="display table table-striped" style="width: 100%; mso-cellspacing: 0;">
+            <thead>
+                <tr></tr>
+            </thead>
+            <tbody>
+               @*@for (var i = 0; i < Model.Count; i++)
+                {
 
-                var item = Model[i];
-                var failure =  _failureRepo.GetAll().FirstOrDefault(x => x.SurveyId == item.Id);
+                    var item = Model[i];
+                    var failure = _failureRepo.GetAll().FirstOrDefault(x => x.SurveyId == item.Id);
+                    <tr>
+                        <th style="font-weight: bold">@(i + 1)</th>
+                        <td>@(failure?.Id)</td>
+                        <td>@(failure?.Description)</td>
+                        <td>@item.Satisfaction &#x2605;</td>
+                        <td>@item.TechPoint &#x2605;</td>
+                        <td>@item.Speed &#x2605;</td>
+                        <td>@item.Pricing &#x2605;</td>
+                        <td>@item.Solving &#x2605;</td>
+                        <td>@(failure?.FinishingTime?.DayOfYear - failure?.CreatedDate.DayOfYear)</td>
+                        <td><a href="@Url.Action("Detail", "Failure", new {id = failure.Id})" class="btn btn-success">Detay</a></td>
+                    </tr>
+                }*@
+            </tbody>
+            <tfoot>
                 <tr>
-                    <th style="font-weight: bold">@(i + 1)</th>
-                    <td>@(failure?.Id)</td>
-                    <td>@(failure?.Description)</td>
-                    <td>@item.Satisfaction &#x2605;</td>
-                    <td>@item.TechPoint &#x2605;</td>
-                    <td>@item.Speed &#x2605;</td>
-                    <td>@item.Pricing &#x2605;</td>
-                    <td>@item.Solving &#x2605;</td>
-                    <td>@(failure?.FinishingTime?.DayOfYear - failure?.CreatedDate.DayOfYear)</td>
-                    <td><a href="@Url.Action("Detail","Failure",new{id = failure.Id})" class="btn btn-success">Detay</a></td>
+                    <td></td>
+                    <td></td>
+                    @*<th style="font-weight: bold; background-color:olive;color:white">Ortalama Puan</th>
+                        <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgSatisfaction.ToString("0.0") &#x2605;</th>
+                        <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgTech.ToString("0.0") &#x2605;</th>
+                        <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgSpeed.ToString("0.0") &#x2605;</th>
+                        <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgPrice.ToString("0.0") &#x2605;</th>
+                        <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgSolving.ToString("0.0") &#x2605;</th>
+                        <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgTime</th>*@
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <td></td>
-                <td></td>
-                <th style="font-weight: bold; background-color:olive;color:white">Ortalama Puan</th>
-                <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgSatisfaction.ToString("0.0") &#x2605;</th>
-                <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgTech.ToString("0.0") &#x2605;</th>
-                <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgSpeed.ToString("0.0") &#x2605;</th>
-                <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgPrice.ToString("0.0") &#x2605;</th>
-                <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgSolving.ToString("0.0") &#x2605;</th>
-                <th style="font-weight: bold;background-color:olive;color:white">@ViewBag.AvgTime</th>
-                <th></th>
-            </tr>
-        </tfoot>
-    </table>
+            </tfoot>
+        </table>
+
+    </div>
 </div>
 <hr />
 <br />
@@ -82,7 +80,6 @@
                 </div>
             </div>
         </div>
-
         <div class="col-md-4 ">
             <div class="panel panel-white stats-widget">
                 <div class="panel-body">
@@ -98,7 +95,6 @@
         </div>
     </div>
     <hr />
-
     <div class="row">
         <div class="box box-danger col-md-6">
             <div class="box-header with-border">
@@ -108,7 +104,6 @@
             </div>
             <!-- /.box-body -->
         </div>
-
         <div class="box box-danger col-md-6">
             <div class="box-header with-border">
                 <div>
@@ -119,7 +114,6 @@
         </div>
     </div>
     <hr />
-
     <div class="row">
         <div class="box box-danger col-md-10">
             <div class="box-header with-border">
@@ -131,3 +125,116 @@
         </div>
     </div>
     <hr />*@
+
+
+
+@section bottom
+    {
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script>
+        $(function () {
+            google.charts.load("current", { packages: ['corechart'] });
+            google.charts.setOnLoadCallback(drawChart);
+            function drawChart() {
+                $.ajax({
+                    url: "@Url.Action("Rapor1","Admin")",
+                    method: "get",
+                    dataType: "json",
+                }).done(function (e) {
+                    var data = new google.visualization.DataTable();
+                    data.addColumn('string', 'Anket Soruları');
+                    data.addColumn('number', 'Puan');
+                    $.each(e.data, function (key, value) {
+                        data.addRow([value.Soru, value.Deger]);
+                    });
+                    var view = new google.visualization.DataView(data);
+                    var options = { // View ın ayarları
+                        title: "Genel Memnuniyet Grafiği",
+                        width: 700,
+                        height: 400,
+                        bar: { groupWidth: "50%" },
+                        legend: { position:"none"}
+
+                    };
+                    var chart = new google.visualization.ColumnChart(document.getElementById("chart_div"));// bu id deki div in içerisine
+                    chart.draw(view, options); // tanımlanan view ı belirlenen ayarlarda göster
+                });
+            }
+
+            @*google.charts.load('current', { 'packages': ['timeline'] });
+            google.charts.setOnLoadCallback(drawChart1);
+            function drawChart1() {
+                $.ajax({
+                    url: "@Url.Action("Rapor2","Admin")",
+                    method: "get",
+                    dataType: "json"
+                }).done(function (e) {
+                    console.log(e);
+                    var container = document.getElementById('timeline');
+                    var chart = new google.visualization.Timeline(container);
+                    var dataTable = new google.visualization.DataTable();
+
+                    dataTable.addColumn({ type: 'string', id: 'Sıra' });
+                    dataTable.addColumn({ type: 'string', id: 'Teknisyen' });
+                    dataTable.addColumn({ type: 'date', id: 'Başlangıç' });
+                    dataTable.addColumn({ type: 'date', id: 'Bitiş' });
+                    $.each(e.data, function (key, value) {
+                        console.log(key);
+                        var arizaTarihiB = new Date(value.ArizaBaslangicTarihiS);
+                        var gun = arizaTarihiB.getDate();
+                        var ay = (arizaTarihiB.getMonth() + 1);
+                        var yil = arizaTarihiB.getFullYear();
+                        var saat = arizaTarihiB.getHours();
+                        var dakika = arizaTarihiB.getMinutes();
+                        var saniye = arizaTarihiB.getSeconds();
+
+                        var arizaTarihiBts = new Date(value.ArizaBitisTarihiS);
+                        var gunBts = arizaTarihiBts.getDate();
+                        var ayBts = (arizaTarihiBts.getMonth() + 1);
+                        var yilBts = arizaTarihiBts.getFullYear();
+                        var saatBts = arizaTarihiBts.getHours();
+                        var dakikaBts = arizaTarihiBts.getMinutes();
+                        var saniyeBts = arizaTarihiBts.getSeconds();
+
+                        dataTable.addRows([
+                            [(key+1)+"",value.TeknisyenAdi, new Date(yil, ay, gun, saat, dakika, saniye), new Date(yilBts, ayBts, gunBts, saatBts, dakikaBts, saniyeBts)],
+                            ]);
+                    });
+
+
+                    chart.draw(dataTable);
+                    });
+
+            }
+
+             google.charts.load("current", { packages: ['corechart'] });
+            google.charts.setOnLoadCallback(drawChart2);
+            function drawChart2() {
+                $.ajax({
+                    url: "@Url.Action("Rapor4","Admin")",
+                    method: "get",
+                    dataType: "json",
+                }).done(function (e) {
+                    var data = new google.visualization.DataTable();
+                    data.addColumn('string', 'Teknisyen Adı');
+                    data.addColumn('number', 'Ortalama Puan');
+                    $.each(e.data, function (key, value) {
+                        data.addRow([value.isim, value.toplam]);
+                    });
+                    var view = new google.visualization.DataView(data);
+                    var options = { // View ın ayarları
+                        title: "Ortalama Teknisyen Memnuniyeti",
+                        width: 700,
+                        height: 400,
+                        bar: { groupWidth: "50%" },
+                        legend: { position:"none"}
+
+                    };
+                    var chart = new google.visualization.ColumnChart(document.getElementById("chart_div2"));// bu id deki div in içerisine
+                    chart.draw(view, options); // tanımlanan view ı belirlenen ayarlarda göster
+                });
+            };*@
+        })
+    </script>
+}
