--- a/HelpDesk.Web/Views/Failure/Add.cshtml
+++ b/HelpDesk.Web/Views/Failure/Add.cshtml
@@ -27,7 +27,7 @@
             <br /><br /><br /><br />
             <h3>@TempData["Message"]</h3>
             <form asp-action="Add" class="fieldset" enctype="multipart/form-data">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <input asp-for="ClientId" type="hidden" />
                 <div class="form-group row">
                     <div class="col-sm-9 control-label">
