--- a/HelpDesk.Web/Views/Admin/UserList.cshtml
+++ b/HelpDesk.Web/Views/Admin/UserList.cshtml
@@ -8,13 +8,12 @@
     ViewBag.Title = "Kullanıcı Yönetimi";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@section top
-    {
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <!-- Page JS Plugins CSS -->
-    <link rel="stylesheet" href="~/assets/js/plugins/datatables/jquery.dataTables.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jq-3.3.1/dt-1.10.18/af-2.3.2/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/r-2.2.2/sc-1.5.0/datatables.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.2/css/buttons.dataTables.min.css" />
+
+@section top{
+    <link href="~/assets/plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
+    <link href="~/assets/plugins/datatables/media/css/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="~/assets/plugins/datatables/extensions/Responsive/css/dataTables.responsive.css" rel="stylesheet">
+    <link href="~/assets/css/demo/jasmine.css" rel="stylesheet">
 }
 
 <div id="container" class="effect mainnav-sm navbar-fixed mainnav-fixed">
@@ -22,70 +21,114 @@
         <div class="pageheader hidden-xs">
             <h3><i class="fa fa-user"></i>Kullanıcı Listesi</h3>
         </div>
-        <div class="card-block">
-            <!-- DataTables init on table by adding .js-dataTable-full class, functionality initialized in js/pages/base_tables_datatables.js -->
-            <table class="table table-bordered table-striped dataTable">
-                <thead>
-                    <tr>
-                        <th class="text-center">#</th>
-                        <th>Avatar</th>
-                        <th>Kullanıcı Adı</th>
-                        <th>Ad</th>
-                        <th>Soyad</th>
-                        <th>Görevi</th>
-                        <th>Email</th>
-                        <th>Onaylı</th>
-                        <th class="text-center" style="width: 10%;">İşlemler</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @for (int i = 0; i < Model.Count; i++)
-                    {
-                        var data = Model[i];
-                        <tr class="@(data.EmailConfirmed ? "" : "bg-red") table table-bordered table-hover toggle-circle default footable-loaded footable">
-                            <td class="text-center">@(i + 1)</td>
-                            <td class="text-center media-object">
-                                <img src="@(string.IsNullOrEmpty(data.AvatarPath) ? "/assets/img/user.png" : data.AvatarPath)" class="img-avatar-96" width="100" height="100" />
-                            </td>
-                            <td class="font-500">@data.UserName</td>
-                            <td>@data.Name</td>
-                            <td>@data.Surname</td>
-                            <td><span class="text-center label @_membershipTools.GetRoleWithColor(data.Id).Result">@_membershipTools.GetRole(data.Id).Result</span></td>
-                            <td>@data.Email</td>
-                            <td>@Html.CheckBox("EmailConfirm", data.EmailConfirmed, new { disabled = "true" })</td>
-                            <td class="text-center">
-                                <div class="btn-group">
-                                    <button class="btn btn-xs btn-default btnsendcode" name="@data.Id" type="button" title="Yeni Aktivasyon Kodu Gönder">
-                                        <i class="glyphicon glyphicon-check"></i>
-                                    </button>
-                                    <button class="btn btn-xs btn-default btnsendpassword" name="@data.Id" type="button" title="Yeni Şifre Gönder">
-                                        <i class="glyphicon glyphicon-refresh"></i>
-                                    </button>
-                                    <a href="@Url.Action("EditUser", "Admin", new {id = data.Id})" class="btn btn-xs btn-default" title="Kullanıcıyı Düzenle">
-                                        <i class="glyphicon glyphicon-wrench"></i>
-                                    </a>
-                                </div>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+        <div id="page-content">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <!-- Basic Data Tables -->
+                    <!--===================================================-->
+                    <div class="panel">
+                        <div class="panel-body">
+                            <table id="demo-dt-basic" class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">#</th>
+                                        <th>Avatar</th>
+                                        <th>Kullanıcı Adı</th>
+                                        <th>Ad</th>
+                                        <th>Soyad</th>
+                                        <th>Görevi</th>
+                                        <th>Email</th>
+                                        <th>Onaylı</th>
+                                        <th class="text-center" style="width: 10%;">İşlemler</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @for (int i = 0; i < Model.Count; i++)
+                                    {
+                                        var data = Model[i];
+                                        <tr style="@(data.EmailConfirmed ? "background-color: #cef6ff" : "background-color: #ffecdd")">
+                                            <td class="text-center">@(i + 1)</td>
+                                            <td class="text-center media-object">
+                                                <img src="@(string.IsNullOrEmpty(data.AvatarPath) ? "/assets/img/user.png" : data.AvatarPath)" class="img-avatar-96" width="100" height="100" />
+                                            </td>
+                                            <td>@data.UserName</td>
+                                            <td>@data.Name</td>
+                                            <td>@data.Surname</td>
+                                            <td><span class="label @_membershipTools.GetRoleWithColor(data.Id).Result" align="center">@_membershipTools.GetRole(data.Id).Result</span></td>
+                                            <td>@data.Email</td>
+                                            <td>@Html.CheckBox("EmailConfirm", data.EmailConfirmed, new { disabled = "true" })</td>
+                                            <td class="text-center">
+                                                <div class="btn-group">
+                                                    <button class="btn btn-xs btn-default btnsendcode" name="@data.Id" type="button" title="Yeni Aktivasyon Kodu Gönder">
+                                                        <i class="glyphicon glyphicon-check"></i>
+                                                    </button>
+                                                    <button class="btn btn-xs btn-default btnsendpassword" name="@data.Id" type="button" title="Yeni Şifre Gönder">
+                                                        <i class="glyphicon glyphicon-refresh"></i>
+                                                    </button>
+                                                    <a href="@Url.Action("EditUser", "Admin", new {id = data.Id})" class="btn btn-xs btn-default" title="Kullanıcıyı Düzenle">
+                                                        <i class="glyphicon glyphicon-wrench"></i>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--===================================================-->
+            <!-- End Striped Table -->
         </div>
-        <!-- .card-block -->
     </div>
 </div>
 
 @section bottom
     {
+    <script src="~/assets/js/jquery-2.1.1.min.js"></script>
 
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs/jq-3.3.1/dt-1.10.18/af-2.3.2/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/r-2.2.2/sc-1.5.0/datatables.min.js"></script>
-
-    <script src="~/assets/plugins/metismenu/metismenu.min.js"></script>
-
+    <script src="~/assets/plugins/nanoscrollerjs/jquery.nanoscroller.min.js"></script>
+    <script src="~/assets/plugins/bootstrap-select/bootstrap-select.min.js"></script>
+    <script src="~/assets/plugins/datatables/media/js/jquery.dataTables.js"></script>
+    <script src="~/assets/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
+    <script src="~/assets/plugins/datatables/extensions/Responsive/js/dataTables.responsive.min.js"></script>
+    <script src="~/assets/js/demo/tables-datatables.js"></script>
+    <script src="~/assets/js/notify.min.js"></script>
     <script>
+        $(document).ready(function () {
+            $('#demo-dt-basic').DataTable().destroy();
+
+            $('#demo-dt-basic').DataTable({
+                retrieve: true,
+                language: {
+                    "decimal": "",
+                    "emptyTable": "Tabloda henüz veri yok.",
+                    "info": "_TOTAL_ veri arasından _START_ - _END_ arasındakiler gösteriliyor.",
+                    "infoEmpty": "0 veri arasından 0 - 0 arasındakiler gösteriliyor.",
+                    "infoFiltered": "(Toplam _MAX_ veri.)",
+                    "infoPostFix": "",
+                    "thousands": ",",
+                    "lengthMenu": "Sayfa başına _MENU_ veri göster.",
+                    "loadingRecords": "Yükleniyor...",
+                    "processing": "İşleniyor...",
+                    "search": "Ara:",
+                    "zeroRecords": "Eşleşen veri bulunamadı.",
+                    "paginate": {
+                        "first": "İlk",
+                        "last": "Son",
+                        "next": "Sonraki",
+                        "previous": "Önceki"
+                    },
+                    "aria": {
+                        "sortAscending": ": artan şekilde sırala",
+                        "sortDescending": ": azalan şekilde sırala"
+                    }
+                }
+            });
+        });
+
         $(function () {
             $(".btnsendpassword").click(function() {
                 var id = this.name;
@@ -126,32 +169,6 @@
                             type: e.success ? "success" : "danger"
                         });
                 });
-            });
-
-            $(".dataTable").DataTable({
-                dom: 'Bfrtip',
-                buttons: [
-                    'copy', 'csv', 'excel', 'pdf', 'print'
-                ]
-            });
-            $(".dataTable").DataTable({
-                responsive: true,
-                language: {
-                    "lengthMenu": "Bir sayfada _MENU_ Kayıt Görüntüle",
-                    "zeroRecords": "Aradığınız kriterde kayıt bulunamadı...",
-                    "info": "Gösterilen Sayfa _PAGE_ / _PAGES_",
-                    "infoEmpty": "Kayıt Bulunmamaktadır",
-                    "infoFiltered": "(Toplam _MAX_ kayıt aranıyor)",
-                    "search": "Arama",
-                    "Previous": "Önceki",
-                    "Next": "Sonraki",
-                    "paginate": {
-                        "first": "ilk",
-                        "last": "son",
-                        "next": "Sonraki",
-                        "previous": "Önceki"
-                    }
-                }
             });
         });
     </script>
